Replacing new URL(String) with URI.create(String).toURL()